--- a/index.html
+++ b/index.html
@@ -1,161 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Ocean</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Raleway", sans-serif;
-        }
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: cursive;
+      }
 
-        h1 {
-            font-size: 4vh;
-            margin: 10px 30px;
-        }
+      h1 {
+        font-size: 4vh;
+        margin: 10px 30px;
+      }
 
-        h3 {
-            font-size: 3vh;
-        }
+      h3 {
+        font-size: 3vh;
+      }
 
-        h4 {
-            font-size: 2vh;
-            padding: 10px 30px;
-        }
+      h4 {
+        font-size: 2vh;
+        padding: 10px 30px;
+      }
 
-        button {
-            background: white;
-            border: 1px solid black;
-            padding: 20px;
-            border-radius: 10px;
-            font-weight: 600;
-            transition: 0.6s;
-            margin-top: 15px;
-        }
+      button {
+        background: white;
+        border: 1px solid black;
+        padding: 20px;
+        border-radius: 10px;
+        font-weight: 600;
+        transition: 0.6s;
+        margin-top: 15px;
+      }
 
-        button:hover {
-            background-color: transparent;
-            border: 1px solid white;
-            color: white;
-        }
+      button:hover {
+        background-color: transparent;
+        border: 1px solid white;
+        color: white;
+      }
 
-        header {
-            background: url(https://64.media.tumblr.com/5c25b35b9bb5de51686327cd734aa238/81bc383ba256ce22-3d/s500x750/5dac9ac302f54d9ec3615aa33bceef0d9ec7691c.gif);
-            background-size: cover;
-            background-repeat: no-repeat;
-            color: white;
-            text-align: center;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 10px;
-        }
+      header {
+        background: url(https://64.media.tumblr.com/5c25b35b9bb5de51686327cd734aa238/81bc383ba256ce22-3d/s500x750/5dac9ac302f54d9ec3615aa33bceef0d9ec7691c.gif);
+        background-size: cover;
+        background-repeat: no-repeat;
+        color: white;
+        text-align: center;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+      }
 
-        .intro {
-            padding: 10px;
-            text-align: justify;
-        }
+      .intro {
+        padding: 10px;
+        text-align: justify;
+      }
 
-        .exo-one {
-            padding: 10px;
-            text-align: justify;
-            margin-bottom: 40px;
-        }
+      .exo-one {
+        padding: 10px;
+        text-align: justify;
+        margin-bottom: 40px;
+      }
 
-        img {
-            float: left;
-            width: 100%;
-            max-width: 400px;
-            display: flex;
-            margin: 0 auto;
-            margin-bottom: 10px;
-        }
+      img {
+        float: left;
+        width: 100%;
+        max-width: 400px;
+        display: flex;
+        margin: 0 auto;
+        margin-bottom: 10px;
+      }
 
-        p {
-            margin: 20px;
-        }
+      p {
+        margin: 20px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="container">
-            <h1>Oceans and water</h1>
-            <h4>Learn about water resources on exo-planets</h4>
-            <button>Know more</button>
-        </div>
+      <div class="container">
+        <h1>Oceans and water</h1>
+        <h4>Learn about water resources on exo-planets</h4>
+        <button>Know more</button>
+      </div>
     </header>
     <div class="intro">
-        <h2>Introduction: </h2>
-        <p>In our universe, where water is a fundamental resource. Oceans play a crucial role in maintaining life on
-            Earth. They provide essential habitats, food sources, and protection from harmful chemicals. Understanding
-            the water cycle and its role in maintaining ecosystems is essential for sustainable development.</p><br>
-        <blockquote><mark>"Water is life. It's a precious resource that we must conserve and protect for future
-                generations."</mark> <br><br> - Unknown </blockquote>
+      <h2>Introduction:</h2>
+      <p>
+        In our universe, where water is a fundamental resource. Oceans play a
+        crucial role in maintaining life on Earth. They provide essential
+        habitats, food sources, and protection from harmful chemicals.
+        Understanding the water cycle and its role in maintaining ecosystems is
+        essential for sustainable development.
+      </p>
+      <br />
+      <blockquote>
+        <mark
+          >"Water is life. It's a precious resource that we must conserve and
+          protect for future generations."</mark
+        >
+        <br /><br />
+        - Unknown
+      </blockquote>
     </div>
     <div class="exo-one">
-        <h3>Exoplanet 1 <b>Kepler-138 c</b></h3>
-        <img src="https://eyes.nasa.gov/apps/exo/assets/image/thumbnail/exoplanet/superearth.webp" alt="kepler">
-        <p>Kepler-138, also known as KOI-314, is a red dwarf located in the constellation Lyra, <b>219 light years from
-                Earth</b>. It is located within the field of vision of the Kepler spacecraft, the satellite that NASA's
-            Kepler Mission used to detect planets transiting their stars. The star hosts <mark> three confirmed planets
-                and a likely fourth</mark>, including the lowest-mass exoplanet with a measured mass and size discovered
-            to date, Kepler-138b, with a mass comparable to that of Mars. Kepler-138d is remarkable for its low density;
-            initially thought likely to be a gas dwarf,[8] more recent observations as of 2022 show that it, as well as
-            planet c, are likely to be ocean worlds.</p>
-        <blockquote>"Kepler-138 c is a super Earth exoplanet that orbits an M-type star. Its mass is 2.3 Earths, it
-            takes 13.8 days to complete one orbit of its star, and is 0.0913 AU from its star. Its discovery was
-            announced in 2014." <br> <b>- NASA</b></blockquote>
+      <h3>Exoplanet 1 <b>Kepler-138 c</b></h3>
+      <img
+        src="https://eyes.nasa.gov/apps/exo/assets/image/thumbnail/exoplanet/superearth.webp"
+        alt="kepler"
+      />
+      <p>
+        Kepler-138, also known as KOI-314, is a red dwarf located in the
+        constellation Lyra, <b>219 light years from Earth</b>. It is located
+        within the field of vision of the Kepler spacecraft, the satellite that
+        NASA's Kepler Mission used to detect planets transiting their stars. The
+        star hosts <mark> three confirmed planets and a likely fourth</mark>,
+        including the lowest-mass exoplanet with a measured mass and size
+        discovered to date, Kepler-138b, with a mass comparable to that of Mars.
+        Kepler-138d is remarkable for its low density; initially thought likely
+        to be a gas dwarf,[8] more recent observations as of 2022 show that it,
+        as well as planet c, are likely to be ocean worlds.
+      </p>
+      <blockquote>
+        "Kepler-138 c is a super Earth exoplanet that orbits an M-type star. Its
+        mass is 2.3 Earths, it takes 13.8 days to complete one orbit of its
+        star, and is 0.0913 AU from its star. Its discovery was announced in
+        2014." <br />
+        <b>- NASA</b>
+      </blockquote>
     </div>
     <div class="exo-one">
-        <h3>Exoplanet 1 <b>Kepler-138 c</b></h3>
-        <img src="https://eyes.nasa.gov/apps/exo/assets/image/thumbnail/exoplanet/superearth.webp" alt="kepler">
-        <p>Kepler-138, also known as KOI-314, is a red dwarf located in the constellation Lyra, <b>219 light years from
-                Earth</b>. It is located within the field of vision of the Kepler spacecraft, the satellite that NASA's
-            Kepler Mission used to detect planets transiting their stars. The star hosts <mark> three confirmed planets
-                and a likely fourth</mark>, including the lowest-mass exoplanet with a measured mass and size discovered
-            to date, Kepler-138b, with a mass comparable to that of Mars. Kepler-138d is remarkable for its low density;
-            initially thought likely to be a gas dwarf,[8] more recent observations as of 2022 show that it, as well as
-            planet c, are likely to be ocean worlds.</p>
-        <blockquote>"Kepler-138 c is a super Earth exoplanet that orbits an M-type star. Its mass is 2.3 Earths, it
-            takes 13.8 days to complete one orbit of its star, and is 0.0913 AU from its star. Its discovery was
-            announced in 2014." <br> <b>- NASA</b></blockquote>
+      <h3>Exoplanet 1 <b>Kepler-138 c</b></h3>
+      <img
+        src="https://eyes.nasa.gov/apps/exo/assets/image/thumbnail/exoplanet/superearth.webp"
+        alt="kepler"
+      />
+      <p>
+        Kepler-138, also known as KOI-314, is a red dwarf located in the
+        constellation Lyra, <b>219 light years from Earth</b>. It is located
+        within the field of vision of the Kepler spacecraft, the satellite that
+        NASA's Kepler Mission used to detect planets transiting their stars. The
+        star hosts <mark> three confirmed planets and a likely fourth</mark>,
+        including the lowest-mass exoplanet with a measured mass and size
+        discovered to date, Kepler-138b, with a mass comparable to that of Mars.
+        Kepler-138d is remarkable for its low density; initially thought likely
+        to be a gas dwarf,[8] more recent observations as of 2022 show that it,
+        as well as planet c, are likely to be ocean worlds.
+      </p>
+      <blockquote>
+        "Kepler-138 c is a super Earth exoplanet that orbits an M-type star. Its
+        mass is 2.3 Earths, it takes 13.8 days to complete one orbit of its
+        star, and is 0.0913 AU from its star. Its discovery was announced in
+        2014." <br />
+        <b>- NASA</b>
+      </blockquote>
     </div>
     <div class="exo-one">
-        <h3>Exoplanet 1 <b>Kepler-138 c</b></h3>
-        <img src="https://eyes.nasa.gov/apps/exo/assets/image/thumbnail/exoplanet/superearth.webp" alt="kepler">
-        <p>Kepler-138, also known as KOI-314, is a red dwarf located in the constellation Lyra, <b>219 light years from
-                Earth</b>. It is located within the field of vision of the Kepler spacecraft, the satellite that NASA's
-            Kepler Mission used to detect planets transiting their stars. The star hosts <mark> three confirmed planets
-                and a likely fourth</mark>, including the lowest-mass exoplanet with a measured mass and size discovered
-            to date, Kepler-138b, with a mass comparable to that of Mars. Kepler-138d is remarkable for its low density;
-            initially thought likely to be a gas dwarf,[8] more recent observations as of 2022 show that it, as well as
-            planet c, are likely to be ocean worlds.</p>
-        <blockquote>"Kepler-138 c is a super Earth exoplanet that orbits an M-type star. Its mass is 2.3 Earths, it
-            takes 13.8 days to complete one orbit of its star, and is 0.0913 AU from its star. Its discovery was
-            announced in 2014." <br><b>- NASA</b></blockquote>
+      <h3>Exoplanet 1 <b>Kepler-138 c</b></h3>
+      <img
+        src="https://eyes.nasa.gov/apps/exo/assets/image/thumbnail/exoplanet/superearth.webp"
+        alt="kepler"
+      />
+      <p>
+        Kepler-138, also known as KOI-314, is a red dwarf located in the
+        constellation Lyra, <b>219 light years from Earth</b>. It is located
+        within the field of vision of the Kepler spacecraft, the satellite that
+        NASA's Kepler Mission used to detect planets transiting their stars. The
+        star hosts <mark> three confirmed planets and a likely fourth</mark>,
+        including the lowest-mass exoplanet with a measured mass and size
+        discovered to date, Kepler-138b, with a mass comparable to that of Mars.
+        Kepler-138d is remarkable for its low density; initially thought likely
+        to be a gas dwarf,[8] more recent observations as of 2022 show that it,
+        as well as planet c, are likely to be ocean worlds.
+      </p>
+      <blockquote>
+        "Kepler-138 c is a super Earth exoplanet that orbits an M-type star. Its
+        mass is 2.3 Earths, it takes 13.8 days to complete one orbit of its
+        star, and is 0.0913 AU from its star. Its discovery was announced in
+        2014." <br /><b>- NASA</b>
+      </blockquote>
     </div>
     <div class="exo-one">
-        <h3>Exoplanet 1 <b>Kepler-138 c</b></h3>
-        <img src="https://eyes.nasa.gov/apps/exo/assets/image/thumbnail/exoplanet/superearth.webp" alt="kepler">
-        <p>Kepler-138, also known as KOI-314, is a red dwarf located in the constellation Lyra, <b>219 light years from
-                Earth</b>. It is located within the field of vision of the Kepler spacecraft, the satellite that NASA's
-            Kepler Mission used to detect planets transiting their stars. The star hosts <mark> three confirmed planets
-                and a likely fourth</mark>, including the lowest-mass exoplanet with a measured mass and size discovered
-            to date, Kepler-138b, with a mass comparable to that of Mars. Kepler-138d is remarkable for its low density;
-            initially thought likely to be a gas dwarf,[8] more recent observations as of 2022 show that it, as well as
-            planet c, are likely to be ocean worlds.</p>
-        <blockquote>"Kepler-138 c is a super Earth exoplanet that orbits an M-type star. Its mass is 2.3 Earths, it
-            takes 13.8 days to complete one orbit of its star, and is 0.0913 AU from its star. Its discovery was
-            announced in 2014." <br> <b>- NASA</b></blockquote>
+      <h3>Exoplanet 1 <b>Kepler-138 c</b></h3>
+      <img
+        src="https://eyes.nasa.gov/apps/exo/assets/image/thumbnail/exoplanet/superearth.webp"
+        alt="kepler"
+      />
+      <p>
+        Kepler-138, also known as KOI-314, is a red dwarf located in the
+        constellation Lyra, <b>219 light years from Earth</b>. It is located
+        within the field of vision of the Kepler spacecraft, the satellite that
+        NASA's Kepler Mission used to detect planets transiting their stars. The
+        star hosts <mark> three confirmed planets and a likely fourth</mark>,
+        including the lowest-mass exoplanet with a measured mass and size
+        discovered to date, Kepler-138b, with a mass comparable to that of Mars.
+        Kepler-138d is remarkable for its low density; initially thought likely
+        to be a gas dwarf,[8] more recent observations as of 2022 show that it,
+        as well as planet c, are likely to be ocean worlds.
+      </p>
+      <blockquote>
+        "Kepler-138 c is a super Earth exoplanet that orbits an M-type star. Its
+        mass is 2.3 Earths, it takes 13.8 days to complete one orbit of its
+        star, and is 0.0913 AU from its star. Its discovery was announced in
+        2014." <br />
+        <b>- NASA</b>
+      </blockquote>
     </div>
-</body>
+  </body>
 </html>
