--- a/Gitdemo.html
+++ b/Gitdemo.html
@@ -8,7 +8,7 @@
       href="Data/Images/photo_2024-04-19_21-22-52.jpg"
     />
   </head>
-  <body>
+  <body style="font-family: cursive">
     <h1 align="left">Bonjour 👋</h1>
 
     <h3 align="left">💫 About Me:</h3>
