--- a/Classes/Assignments/Assignment2_2.html
+++ b/Classes/Assignments/Assignment2_2.html
@@ -14,6 +14,7 @@
         margin-left: 150px;
         margin-right: 150px;
         margin-top: 50px;
+        /* font-family:Lucida Handwriting; */
       }
     </style>
   </head>
