New Repo and Web Changes

--- a/test.html
+++ b/test.html
@@ -1,14 +1,194 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/jpg"
-      href="Data/Images/photo_2024-04-19_21-22-52.jpg"
+<div align="left">
+  <img width="12" />
+
+  <a
+    href="https://www.linkedin.com/in/arji-jethin-naga-sai-eswar-345138278/"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://user-images.githubusercontent.com/74038190/235294012-0a55e343-37ad-4b0f-924f-c8431d9d2483.gif"
+      height="50"
+      alt="linkedin logo"
     />
-    <title>Favicons</title>
-  </head>
-  <body></body>
-</html>
+  </a>
+
+  <img width="12" />
+
+  <a
+    href="https://www.instagram.com/eswararji07/"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://user-images.githubusercontent.com/74038190/235294013-a33e5c43-a01c-43f6-b44d-a406d8b4ab75.gif"
+      height="50"
+      alt="instagram logo"
+    />
+  </a>
+
+  <img width="12" />
+
+  <a
+    href="https://www.youtube.com/@mrphoenix2518"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://user-images.githubusercontent.com/74038190/235294007-de441046-823e-4eff-89bf-d4df52858b65.gif"
+      height="50"
+      alt="youtube logo"
+    />
+  </a>
+
+  <img width="12" />
+
+  <a
+    href="https://x.com/ArjiJethin51993"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://user-images.githubusercontent.com/74038190/235294011-b8074c31-9097-4a65-a594-4151b58743a8.gif"
+      height="50"
+      alt="Twitter logo"
+    />
+  </a>
+  
+  
+  <img width="12" />
+
+  <a
+    href="mailto:arjijethin.ac2207@gmail.com"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg"
+      height="40"
+      alt="youtube logo"
+    />
+  </a>
+  <img width="12" />
+  <a href="" target="_blank" style="display: inline-block; margin: 0"></a>
+    <img
+      src="https://raw.githubusercontent.com/maurodesouza/profile-readme-generator/master/src/assets/icons/social/codepen/default.svg"
+      width="52"
+      height="40"
+      alt="codepen logo"
+    />
+  </a>
+  <img width="12" />
+  <a href="" target="_blank" style="display: inline-block; margin: 0">
+    <img
+      src="https://raw.githubusercontent.com/maurodesouza/profile-readme-generator/master/src/assets/icons/social/hackerrank/default.svg"
+      width="52"
+      height="40"
+      alt="hackerrank logo"
+    />
+  </a>
+  <img width="12" />
+  <a
+    href="https://x.com/ArjiJethin51993"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://user-images.githubusercontent.com/74038190/235294015-47144047-25ab-417c-af1b-6746820a20ff.gif"
+      height="50"
+      alt="Discord logo"
+    />
+  </a>
+
+
+</div>
+
+<br /><br /><br /><br /><br />
+
+<div align="left">
+  <a
+    href="https://www.linkedin.com/in/arji-jethin-naga-sai-eswar-345138278/"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      style="border-radius: 25vh"
+      src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg"
+      height="40"
+      width="60"
+      alt="linkedin logo"
+    />
+  </a>
+  <a
+    href="https://www.instagram.com/eswararji07/"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg"
+      height="40"
+      width="60"
+      alt="instagram logo"
+    />
+  </a>
+  <a
+    href="https://www.youtube.com/@mrphoenix2518"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg"
+      height="40"
+      width="60"
+      alt="youtube logo"
+    />
+  </a>
+  <a
+    href="https://x.com/ArjiJethin51993"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg"
+      height="40"
+      width="60"
+      alt="twitter logo"
+    />
+  </a>
+  <a
+    href="mailto:arjijethin.ac2207@gmail.com"
+    target="_blank"
+    style="display: inline-block; margin: 0"
+  >
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg"
+      height="35"
+      width="60"
+      alt="gmail logo"
+    />
+  </a>
+  <a href="" target="_blank" style="display: inline-block; margin: 0">
+    <img
+      src="https://raw.githubusercontent.com/maurodesouza/profile-readme-generator/master/src/assets/icons/social/codepen/default.svg"
+      width="52"
+      height="40"
+      alt="codepen logo"
+    />
+  </a>
+  <a href="" target="_blank" style="display: inline-block; margin: 0">
+    <img
+      src="https://raw.githubusercontent.com/maurodesouza/profile-readme-generator/master/src/assets/icons/social/hackerrank/default.svg"
+      width="52"
+      height="40"
+      alt="hackerrank logo"
+    />
+  </a>
+  <a href="" target="_blank" style="display: inline-block; margin: 0">
+    <img
+      src="https://raw.githubusercontent.com/maurodesouza/profile-readme-generator/master/src/assets/icons/social/discord/default.svg"
+      width="52"
+      height="40"
+      alt="discord logo"
+    />
+  </a>
+</div>
