--- a/Classes/Assignments/ColorPalette.html
+++ b/Classes/Assignments/ColorPalette.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="../../Data/Images/icons8-html-120.png"
+    />
     <title>Color Table</title>
     <style>
       body {
