--- a/Classes/Assignments/CurriculumVitae.html
+++ b/Classes/Assignments/CurriculumVitae.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment</title>
     <link
-      rel="style"
+      rel="icon"
       type="image/png"
       href="../../Data/Images/icons8-html-120.png"
     />
