--- a/Classes/Assignments/In&OpLists.html
+++ b/Classes/Assignments/In&OpLists.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Input/Output Devices</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      href="../../Data/Images/icons8-html-120.png"
+      type="image/png"
+    />
     <style>
       body {
         font-family: Arial, sans-serif;
