--- a/Classes/Assignments/ModelQuestionPaper.html
+++ b/Classes/Assignments/ModelQuestionPaper.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment2_2</title>
+    <title>Model Paper</title>
     <link
       rel="icon"
       type="image/png"
