--- a/Classes/Assignments/Registration-0Lvl.html
+++ b/Classes/Assignments/Registration-0Lvl.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration Form for O Level Course</title>
+    <link rel="icon" type="image/png" href="../../Data/Images/icons8-html-120.png">
     <style>
       * {
         margin: 0;
