--- a/Classes/Assignments/WebsiteList.html
+++ b/Classes/Assignments/WebsiteList.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Categories of Websites</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="../../Data/Images/icons8-html-120.png"
+    />
     <style>
       body {
         font-family: Arial, sans-serif;
