--- a/Classes/Assignments/Registration-0Lvl.html
+++ b/Classes/Assignments/Registration-0Lvl.html
@@ -68,7 +68,7 @@
       }
 
       input[type="radio"] {
-        margin-left: 10px;
+        margin-left: 20px;
       }
 
       button {
@@ -101,6 +101,7 @@
         <div class="section">
           <h2>1. Registration Form</h2>
           <div class="form-group">
+            <div style="margin-bottom: 5px;">
             <label
               >1.0 Have you got an online reference number for enrollment with
               NIELIT?</label
@@ -108,6 +109,7 @@
             <input type="radio" name="reference" value="Yes"> Yes</input>
             <input type="radio" name="reference" value="No" /> No</input>
           </div>
+        </div>
           <div class="form-group">
             <label>1.1 Registration sought for:</label>
             <input
