--- a/Classes/Assignments/HTML/BasicHTML.html
+++ b/Classes/Assignments/HTML/BasicHTML.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic Page</title>
     <link rel="icon" type="image/png"
-    href="../../Data/Images/icons8-html-120.png"
+    href="../../../Data/Images/icons8-html-120.png"
   </head>
   <body style="padding: 10px 70px 30px 70px">
     <h1 style="text-align: center">HTML Assignment 1</h1>
