--- a/Classes/Assignments/HTML/CSSAnimations.html
+++ b/Classes/Assignments/HTML/CSSAnimations.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-space-96.png"
+      href="../../../Data/Images/icons8-space-96.png"
     />
     <style>
       body {
@@ -57,14 +57,14 @@
     <marquee id="Dude" scrollamount="12" direction="left">
       <img
         id="Dude"
-        src="../../Data/Images/walking-1.gif"
+        src="../../../Data/Images/walking-1.gif"
         height="250px"
         alt="More hell"
       />
       <img
         id="Dude"
         style="position: relative; top: 90%; margin-bottom: 19px"
-        src="../../Data/Images/doggo.gif"
+        src="../../../Data/Images/doggo.gif"
         height="100px"
         alt="Most Hell"
       />
@@ -72,7 +72,7 @@
 
     <img
       class="Rocket"
-      src="../../Data/Images/flame-822.gif"
+      src="../../../Data/Images/flame-822.gif"
       alt="Mostest Hell"
     />
 
