--- a/Classes/Assignments/HTML/CurriculumVitae.html
+++ b/Classes/Assignments/HTML/CurriculumVitae.html
@@ -7,12 +7,12 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
     />
 
     <style>
       body {
-        background-image: url(../../Data/Images/laptop-book.jpg);
+        background-image: url(../../../Data/Images/laptop-book.jpg);
         background-size: cover;
         overflow: hidden;
         color: white;
