--- a/Classes/Assignments/HTML/DoctorAppointment.html
+++ b/Classes/Assignments/HTML/DoctorAppointment.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
     />
     <style>
       body {
@@ -96,7 +96,7 @@
       <div class="form-container">
         <div class="image">
           <img
-            src="../../Data/Images/vector-illustration-male-doctor-transparent-background_181203-30335-removebg.png"
+            src="../../../Data/Images/vector-illustration-male-doctor-transparent-background_181203-30335-removebg.png"
             height=""
             alt="Doctor"
           />
