--- a/Classes/Assignments/HTML/Infomax.html
+++ b/Classes/Assignments/HTML/Infomax.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
     />
 
     <style>
@@ -39,7 +39,7 @@
     />
     <img
       style="float: right; height: 300px"
-      src="../../Data/Images/gettyimages-1327018449-612x612-removebg-preview.png"
+      src="../../../Data/Images/gettyimages-1327018449-612x612-removebg-preview.png"
       alt="hehe :)"
     />
     <h2>Who We Are?</h2>
