--- a/Classes/Assignments/HTML/MarqueeImages.html
+++ b/Classes/Assignments/HTML/MarqueeImages.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marquee Image</title>
     <link rel="icon" type="image/gif"
-    href="../../Data/Images/dazzle-two-books-with-a-bookmark.gif" ">
+    href="../../../Data/Images/dazzle-two-books-with-a-bookmark.gif" ">
     <style>
       @keyframes swipe {
         0% {
@@ -58,48 +58,48 @@
     <marquee scrollamount="50" direction="right">
       <div class="roll">
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
 
         <img
-          src="../../Data/Images/kingdom-1188.gif"
+          src="../../../Data/Images/kingdom-1188.gif"
           alt="Maruee Image"
           height="150px"
         />
