--- a/Classes/Assignments/HTML/RegistrationForm.html
+++ b/Classes/Assignments/HTML/RegistrationForm.html
@@ -6,7 +6,7 @@
     <title>Registration Form</title>
     <link
       rel="icon"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
       type="image/png"
     />
 
