--- a/Classes/Assignments/HTML/WorkingWithImages.html
+++ b/Classes/Assignments/HTML/WorkingWithImages.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-books-96.png"
+      href="../../../Data/Images/icons8-books-96.png"
     />
   </head>
   <body style="padding: 10px 100px">
@@ -15,7 +15,7 @@
     <hr style="background-color: red; height: 1px" />
     <img
       style="float: left; margin: 30px 30px 30px 0px; border: 4px solid black"
-      src="../../Data/Images/bouncy-open-book-glasses-and-stars.gif"
+      src="../../../Data/Images/bouncy-open-book-glasses-and-stars.gif"
       alt="Image 1"
       height="200px"
       width="300px"
@@ -41,7 +41,7 @@
     </p>
     <img
       style="float: right; margin: 0px 0px 20px 30px; border: 4px solid black"
-      src="../../Data/Images/taxi-computer-monitor-with-book-mortarboard-and-stationery-for-online-education.gif"
+      src="../../../Data/Images/taxi-computer-monitor-with-book-mortarboard-and-stationery-for-online-education.gif"
       alt="Image 2"
       height="300px"
     />
@@ -67,7 +67,7 @@
 
     <img
       style="float: left; margin: 15px 30px 30px 0px; border: 4px solid black"
-      src="../../Data/Images/bendy-pumpkin-basket-with-sweets-candles-and-books.gif"
+      src="../../../Data/Images/bendy-pumpkin-basket-with-sweets-candles-and-books.gif"
       alt="Image 3"
       height="200px"
     />
