--- a/Classes/Assignments/HTML/infomaxBg.html
+++ b/Classes/Assignments/HTML/infomaxBg.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
     />
     <style>
       body {
@@ -36,7 +36,7 @@
     </marquee>
     <img
       style="float: left; margin-bottom: 0; padding: 0; height: 390px"
-      src="../../Data/Images/gettyimages-1327018449-612x612-removebg-preview.png"
+      src="../../../Data/Images/gettyimages-1327018449-612x612-removebg-preview.png"
       alt="hehe:)"
     />
   </body>
