--- a/Classes/Assignments/HTML/In&OpLists.html
+++ b/Classes/Assignments/HTML/In&OpLists.html
@@ -6,7 +6,7 @@
     <title>Input/Output Devices</title>
     <link
       rel="icon"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
       type="image/png"
     />
     <style>
