--- a/Classes/Assignments/HTML/InfomaxFull.html
+++ b/Classes/Assignments/HTML/InfomaxFull.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
     />
 
     <style>
@@ -49,7 +49,7 @@
     />
     <img
       style="float: left; height: 300px"
-      src="../../Data/Images/storyline-online-banking-on-laptop-screen.gif"
+      src="../../../Data/Images/storyline-online-banking-on-laptop-screen.gif"
       alt="hehe :)"
     />
     <h2>CCC-Course on Computer Concept</h2>
