--- a/Classes/Assignments/HTML/Marquee Google.html
+++ b/Classes/Assignments/HTML/Marquee Google.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
