--- a/Classes/Assignments/HTML/ModelQuestionPaper.html
+++ b/Classes/Assignments/HTML/ModelQuestionPaper.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../Data/Images/icons8-html-120.png"
+      href="../../../Data/Images/icons8-html-120.png"
     />
     <style>
       body {
