--- a/Classes/Assignments/HTML/practice(ASN4).html
+++ b/Classes/Assignments/HTML/practice(ASN4).html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="image/gif"
-      href="../../Data/Images/dazzle-two-books-with-a-bookmark.gif"
+      href="../../../Data/Images/dazzle-two-books-with-a-bookmark.gif"
     />
     <style>
       body {
@@ -56,27 +56,81 @@
     <div class="marquee-container">
       <div class="marquee">
         <div class="images">
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
         </div>
         <div class="images">
           <!-- Duplicate images for continuous effect -->
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
-          <img src="../../Data/Images/kingdom-1188.gif" alt="Marquee Image" />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
+          <img
+            src="../../../Data/Images/kingdom-1188.gif"
+            alt="Marquee Image"
+          />
         </div>
       </div>
     </div>
