--- a/Classes/Assignments/HTML/CSSAnimations.html
+++ b/Classes/Assignments/HTML/CSSAnimations.html
@@ -11,7 +11,7 @@
     />
     <style>
       body {
-        background-image: url(../../Data/Images/wp5569710-night-sky-4k-wallpapers.jpg);
+        background-image: url(../../../Data/Images/wp5569710-night-sky-4k-wallpapers.jpg);
         background-size: cover;
         height: 100vh;
         margin: 0;
