--- a/Classes/CSS/class4.html
+++ b/Classes/CSS/class4.html
@@ -9,8 +9,8 @@
   <body>
     <div>
       <p>Full Stack Development</p>
-      <p>Midule1: HTML</p>
+      <p>Module1: HTML</p>
     </div>
-    <p>Module2: CSs</p>
+    <p>Module: CSS</p>
   </body>
 </html>
