--- a/Classes/CSS/class4.html
+++ b/Classes/CSS/class4.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <div>
-      <p>Full Stack Development</p>
-      <p>Module1: HTML</p>
+      <p>Full Stack Development</br>Module1: HTML</p>
     </div>
     <p>Module: CSS</p>
   </body>
