--- a/Classes/Assignments/HTML/CurriculumVitae.html
+++ b/Classes/Assignments/HTML/CurriculumVitae.html
@@ -18,7 +18,7 @@
         color: white;
         padding-left: 5%;
         padding-top: 10px;
-        padding-bottom: 15pxx;
+        padding-bottom: 15px;
       }
     </style>
   </head>
