--- a/Classes/Assignments/HTML/ModelQuestionPaper.html
+++ b/Classes/Assignments/HTML/ModelQuestionPaper.html
@@ -16,10 +16,18 @@
         margin-top: 50px;
         /* font-family:Lucida Handwriting; */
       }
+
+      .container{
+        max-width: 800px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: white;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
     </style>
   </head>
   <body>
-    <h3 style="text-align: center">
+    <div id="container">
       <u>MODEL QUESTION PAPER FOR SUMMATIVE TEST-II</u>
     </h3>
     <h3 style="text-align: center">
@@ -63,5 +71,6 @@
     <p style="text-align: center">
       <strike>Cutting is Not Allowed</strike> Select Only one Option
     </p>
+  </div>
   </body>
 </html>
