--- a/Classes/Assignments/HTML/MarqueeImagesCon.html
+++ b/Classes/Assignments/HTML/MarqueeImagesCon.html
@@ -13,6 +13,8 @@
       body {
         padding: 10px 30px 30px 30px;
         overflow: hidden; /* Prevent scrollbars */
+        background-color: black;
+        color: white;
       }
 
       @keyframes swipe {
@@ -32,7 +34,7 @@
 
       .marquee {
         display: flex;
-        animation: swipe 10s linear infinite; /* Adjust speed here */
+        animation: swipe 0.00001s linear infinite; /* Adjust speed here */
       }
 
       .marquee img {
@@ -50,7 +52,7 @@
     <hr style="background-color: cyan; height: 1px" />
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
-      sint, deleniti quae...
+      sint, deleniti quae....
     </p>
     <hr />
     <div class="marquee-container">
