--- a/Classes/Assignments/HTML/Assignment_1.2.1.html
+++ b/Classes/Assignments/HTML/Assignment_1.2.1.html
@@ -49,7 +49,7 @@
     />
     <img
       style="float: left; height: 300px"
-      src="../../../Data/Images/storyline-online-banking-on-laptop-screen.gif"
+      src="../../../../../Data/Images/storyline-online-banking-on-laptop-screen.gif"
       alt="hehe :)"
     />
     <h2>CCC-Course on Computer Concept</h2>
@@ -77,7 +77,7 @@
     <hr style="background-color: white; border-bottom: 1px white solid" />
     <img
       style="float: right; height: 300px"
-      src="../../Data/Images/storyline-blogging-vlogging-streaming-and-content-creation.gif"
+      src="../../../Data/Images/storyline-blogging-vlogging-streaming-and-content-creation.gif"
       alt="hehe :)"
     />
     <h2>CCA - Certificate Course in Computer Application</h2>
@@ -109,7 +109,7 @@
     <hr style="background-color: white; border-bottom: 1px white solid" />
     <img
       style="float: left; height: 330px"
-      src="../../Data/Images/lounge-digital-data-protection-and-information-security.gif"
+      src="../../../Data/Images/lounge-digital-data-protection-and-information-security.gif"
       alt="hehe :)"
     />
     <h2>DCA - Diploma in Computer Application</h2>
@@ -140,7 +140,7 @@
     <hr style="background-color: white; border-bottom: 1px white solid" />
     <img
       style="float: right; height: 300px"
-      src="../../Data/Images/social-data-analytics-with-different-charts-on-pc-1.gif"
+      src="../../../Data/Images/social-data-analytics-with-different-charts-on-pc-1.gif"
       alt="hehe :)"
     />
     <h2>ADCA - Advance Diploma in Computer Application</h2>
@@ -172,7 +172,7 @@
     <hr style="background-color: white; border-bottom: 1px white solid" />
     <img
       style="float: left; height: 350px"
-      src="../../Data/Images/bubble-gum-computer-monitor-with-web-design-programs.gif"
+      src="../../../Data/Images/bubble-gum-computer-monitor-with-web-design-programs.gif"
       alt="hehe :)"
     />
     <h2>C++-Object Oriented Programming using C+</h2>
