--- a/Classes/CSS/class3.html
+++ b/Classes/CSS/class3.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Class3</title>
+    <style>
+      body {
+        background-color: black;
+        color: white;
+      }
+      h1 {
+        width: 150px;
+      }
+      h1:hover {
+        color: red;
+        width: 150px;
+      }
+      button {
+        background-color: green;
+        padding: 15px 30px 15px 25px;
+        border-radius: 10px;
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        box-shadow: 0 0 10px white;
+      }
+
+      button:hover {
+        background-color: cadetblue;
+        box-shadow: 0 0 15px green;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <h1>Hover Tag</h1>
+    <button>Submit</button>
+  </body>
 </html>
