--- a/Exams/Practise2.html
+++ b/Exams/Practise2.html
@@ -59,6 +59,14 @@
             </select>
           </div>
           <div>
+            <label for="">IceCreams: </label>
+            <input type="text" list="ice">
+            <datalist id="ice">
+              <option value="Chocolate">Chocolate</option>
+            </datalist>
+
+          </div>
+          <div>
             <button type="submit" value="Submit">Submit</button>
             <button type="reset" value="Clear">Clear</button>
           </div>
