--- a/Exams/Practise2.html
+++ b/Exams/Practise2.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="practise2.css">
-    </style>
+    <link rel="stylesheet" href="practise2.css" />
   </head>
-  <body >
-    <div align="center" class="form-container">
+  <body style="display: flex">
+    <div class="form-container">
       <h1 align="center">Registration</h1>
       <form action="#">
         <fieldset>
@@ -60,11 +59,11 @@
           </div>
           <div>
             <label for="">IceCreams: </label>
-            <input type="text" list="ice">
+            <input type="text" list="ice" />
             <datalist id="ice">
               <option value="Chocolate">Chocolate</option>
+              <option value="Vanilla">Vanilla</option>
             </datalist>
-
           </div>
           <div>
             <button type="submit" value="Submit">Submit</button>
