Refactor CSS in class6.html

--- a/Classes/CSS/class6.html
+++ b/Classes/CSS/class6.html
@@ -6,6 +6,11 @@
     <title>Class6</title>
     <link rel="icon" href="../../Data/Images/icons8-html-120.png" />
     <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: black;
+        color: white;
+      }
       li.one {
         font-size: 20pt;
         list-style-image: url(../../Data/Images/bubble-gum-computer-monitor-with-web-design-programs.gif);
@@ -26,5 +31,9 @@
       <li class="three">Three</li>
       <li class="four">Four</li>
     </ul>
+
+    <script>
+      console.alert("Hehe");
+    </script>
   </body>
 </html>
